# optimal_build

./: .auth-required-baseline.txt  .coding-rules-exceptions.yml  .coding-rules.yaml  .coveragerc  .cursorrules  .design-token-exceptions.txt  .documentation-whitelist.yaml  .editorconfig  .env  .env.example  .env.production.template  .flake8  .gitignore  .impeccable.md  .mypy_baseline  .pre-commit-config.yaml  .secrets-allowlist.txt  .ui-canon-exceptions.yml  .windsurfrules  AGENTS.md  API_ENDPOINTS.md  BACKLOG.md  CAD_DETECTION_QUICK_FIX.md  CLAUDE.md  CODEX.md  CODING_RULES.md  CONTRIBUTING.md  DATA_MODELS_TREE.md  DETECTION_PAGE_REALITY_CHECK.md  DUPLICATE_FILES_REPORT.MD  FEATURES.md  FLOOR_UNIT_DETECTION_TEST.html  GEMINI.md  LIVE_TESTING_GUIDE.md  MCP.md  MIGRATION_HOOK_CONFLICT_ANALYSIS.md  MIGRATION_ISSUES_ROOT_CAUSE_ANALYSIS.md  Makefile  NUMPY_FIX_STATUS.md  PHASE1_IMPLEMENTATION_SUMMARY.md  (+52 more)
.claude/: settings.json
.devstack/: backend.env
.git-hooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.playwright-browsers/: README.md
app/: __init__.py
artifacts/: ui_audit_20251214.md  ui_audit_20251214_pages_only_superseded.md
backend/: .coveragerc  Dockerfile  TEST_API_SKIP_NOTES.MD  __init__.py  _sqlalchemy_stub.py  _stub_loader.py  alembic.ini  httpx.py  nohup.out  pyproject.toml  pytest_asyncio.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  sitecustomize.py  test_db_connection.py  worker.py
core/: canonical_models.py  global_categories.yaml  mapping.py  registry.py  util.py
data/: hk_market_assumptions.yaml  nz_finance_scenario_payload.json  nz_market_assumptions.yaml
db/: alembic.ini  env.py
docs/: ARCHITECTURE_REALITY_CHECK.md  AUTHENTICATION.md  AUTOMATED_TESTING.md  DEPLOYMENT.md  DOMAIN_NAMING_STANDARDS.md  INFRA_MONITORING.MD  MARKET_DATA_SCHEMA.md  NEXT_STEPS_FOR_AI_AGENTS_AND_DEVELOPERS.md  NEXT_STEPS_FOR_CODEX.md  PDF_TESTING_CHECKLIST.md  PHASE2B_VISUALISATION_STUB.MD  README.md  ROADMAP.MD  SECURITY.md  SOLO_FOUNDER_GUIDE.md  TECHNICAL_DEBT.md  TEST_COVERAGE_REPORT.MD  WORK_QUEUE.MD  all_steps_to_product_completion.md  analytics_capture_policy.md  architecture.md  architecture_honest.md  capture-assumption-governance.md  ci.md  data_sources_policy.md  documentation_consolidation_strategy.md  entitlements.md  entitlements_api.md  export_api.md  feasibility.md  feasibility_workflows.md  feature_delivery_plan.md  feature_delivery_plan_v2.md  finance_api.md  frontend.md  geometry_contracts.md  handoff_playbook.md  ingestion.md  jurisdiction_expansion_playbook.md  openapi.json  (+14 more)
eval_type_backport/: __init__.py
fastapi/: __init__.py  responses.py  status.py  testclient.py
fastapi_shadow_1758771137/: __init__.py  responses.py  security.py  status.py  testclient.py
frontend/: .c8rc.json  .env.example  .eslintrc.cjs  Dockerfile  README.md  README_AI_AGENTS.md  UI_STANDARDS.md  UX_ARCHITECTURE.md  eslint.config.cjs  index.html  package-lock.json  package.json  (+6 more)
(+2059 files in other folders)
