[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regstack"
version = "0.1.0"
description = "Jurisdiction plug-in architecture for building regulations"
authors = [{ name = "Regstack Contributors" }]
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
    "pydantic>=2.6",
    "alembic>=1.13",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools]
packages = ["core", "jurisdictions", "scripts", "db"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
combine-as-imports = true
