[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regstack"
version = "0.1.0"
description = "Jurisdiction plug-in architecture for building regulations"
authors = [{ name = "Regstack Contributors" }]
requires-python = ">=3.13"
dependencies = [
    "SQLAlchemy>=2.0",
    "pydantic>=2.6",
    "alembic>=1.13",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools]
packages = ["core", "jurisdictions", "scripts", "db"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = """
(
  ^/frontend
 | ^/ui-admin
 | ^/fastapi
 | ^/fastapi_shadow_.*
 | ^/starlette_shadow_.*
 | ^/pydantic_shadow_.*
 | ^/httpx
 | ^/sqlalchemy
 | ^/sqlalchemy_pkg_backup
 | ^/importlib
 | ^/uvicorn_app
 | ^/backend/_vendor
 | ^/backend/migrations
 | ^/backend/starlette
 | ^/backend/aiosqlite
)
"""

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".venv",
    ".git",
    "build",
    "dist",
    "frontend",
    "ui-admin",
    "fastapi",
    "fastapi_shadow_*",
    "starlette_shadow_*",
    "pydantic_shadow_*",
    "httpx",
    "sqlalchemy",
    "sqlalchemy_pkg_backup",
    "importlib",
    "uvicorn_app",
    "backend/_vendor",
    "backend/migrations",
    "backend/starlette",
    "backend/aiosqlite",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "UP",
    "I",
    "C4",
]
ignore = ["E203", "E402"]
extend-ignore = ["B008"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app", "flows", "jobs", "scripts", "core"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
known_first_party = ["app", "flows", "jobs", "scripts", "core"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
# Skip migration files - they follow Alembic conventions
extend_skip_glob = ["*/migrations/versions/*.py"]
